@@ -46,3 +46,4 @@
 20080917 code: added agar.gui.widget.scrollbar API functions.
 20080917 code: added agar.gui.widget.separator API functions.
 20080917 code: added agar.gui.widget.slider API functions.
+20080918 code: use stronger typing for flags_t in interfaces (not subtypes).
